reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__enums__enum_with_discriminant_ignored_output-4.snap
---
source: reflectapi-demo/src/tests/enums.rs
expression: "super :: into_output_python_code :: < TestEnumWithDiscriminantIgnored > ()"
---
"""
DO NOT MODIFY THIS FILE MANUALLY
This file was generated by reflectapi-cli

Schema name:
"""

from __future__ import annotations


# Standard library imports
from enum import Enum
from typing import Annotated, Any, Generic, Optional, TypeVar, Union

# Third-party imports
from pydantic import BaseModel, ConfigDict, Field

# Runtime imports
from reflectapi_runtime import AsyncClientBase, ClientBase, ApiResponse
from reflectapi_runtime import ReflectapiEmpty
from reflectapi_runtime import ReflectapiInfallible


class ReflectapiDemoTestsEnumsTestEnumWithDiscriminantIgnored(str, Enum):
    VARIANT1 = "Variant1"
    VARIANT2 = "Variant2"


# Namespace classes for dotted access to types
class reflectapi_demo:
    """Namespace for reflectapi_demo types."""

    class tests:
        """Namespace for tests types."""

        class enums:
            """Namespace for enums types."""

            TestEnumWithDiscriminantIgnored = (
                ReflectapiDemoTestsEnumsTestEnumWithDiscriminantIgnored
            )


class AsyncOutputClient:
    """Async client for output operations."""

    def __init__(self, client: AsyncClientBase) -> None:
        self._client = client

    async def test(
        self,
    ) -> ApiResponse[reflectapi_demo.tests.enums.TestEnumWithDiscriminantIgnored]:
        """

        Returns:
            ApiResponse[reflectapi_demo.tests.enums.TestEnumWithDiscriminantIgnored]: Response containing reflectapi_demo.tests.enums.TestEnumWithDiscriminantIgnored data
        """
        path = "/output_test"

        params: dict[str, Any] = {}
        return await self._client._make_request(
            path,
            params=params if params else None,
            response_model=reflectapi_demo.tests.enums.TestEnumWithDiscriminantIgnored,
        )


class AsyncClient(AsyncClientBase):
    """Async client for the API."""

    def __init__(
        self,
        base_url: str,
        **kwargs: Any,
    ) -> None:
        super().__init__(base_url, **kwargs)

        self.output = AsyncOutputClient(self)


class OutputClient:
    """Synchronous client for output operations."""

    def __init__(self, client: ClientBase) -> None:
        self._client = client

    def test(
        self,
    ) -> ApiResponse[reflectapi_demo.tests.enums.TestEnumWithDiscriminantIgnored]:
        """

        Returns:
            ApiResponse[reflectapi_demo.tests.enums.TestEnumWithDiscriminantIgnored]: Response containing reflectapi_demo.tests.enums.TestEnumWithDiscriminantIgnored data
        """
        path = "/output_test"

        params: dict[str, Any] = {}
        return self._client._make_request(
            path,
            params=params if params else None,
            response_model=reflectapi_demo.tests.enums.TestEnumWithDiscriminantIgnored,
        )


class Client(ClientBase):
    """Synchronous client for the API."""

    def __init__(
        self,
        base_url: str,
        **kwargs: Any,
    ) -> None:
        super().__init__(base_url, **kwargs)

        self.output = OutputClient(self)


# External type definitions
StdNumNonZeroU32 = Annotated[int, "Rust NonZero u32 type"]
StdNumNonZeroU64 = Annotated[int, "Rust NonZero u64 type"]
StdNumNonZeroI32 = Annotated[int, "Rust NonZero i32 type"]
StdNumNonZeroI64 = Annotated[int, "Rust NonZero i64 type"]

# Rebuild models to resolve forward references
_rebuild_errors: list[str] = []
for _model in [
    ReflectapiDemoTestsEnumsTestEnumWithDiscriminantIgnored,
]:
    if not hasattr(_model, "model_rebuild"):
        continue
    try:
        _model.model_rebuild()
    except Exception as _exc:
        _rebuild_errors.append(f"  - {_model.__name__}: {type(_exc).__name__}: {_exc}")
if _rebuild_errors:
    raise RuntimeError(
        "reflectapi: failed to rebuild "
        + str(len(_rebuild_errors))
        + " generated model(s). This usually means the codegen emitted an annotation pointing at a symbol that was never defined (a dangling type reference). Fix the codegen rather than catching this error.\n"
        + "\n".join(_rebuild_errors)
    )
