reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__enums__enum_with_generics.snap
---
source: reflectapi-demo/src/tests/enums.rs
expression: "super::into_input_schema::<TestEnumWithGenerics<u8>>().input_types"
---
{
  "types": [
    {
      "kind": "struct",
      "id": {
        "kind": "Struct",
        "path": [
          "reflectapi::Empty"
        ],
        "disambiguator": 0
      },
      "name": "reflectapi::Empty",
      "description": "Struct object with no fields",
      "fields": "none"
    },
    {
      "kind": "enum",
      "id": {
        "kind": "Enum",
        "path": [
          "TestEnumWithGenerics"
        ],
        "disambiguator": 0
      },
      "name": "reflectapi_demo::tests::enums::TestEnumWithGenerics",
      "parameters": [
        {
          "name": "T"
        }
      ],
      "variants": [
        {
          "id": {
            "kind": "Variant",
            "path": [
              "Variant1"
            ],
            "disambiguator": 0
          },
          "name": "Variant1",
          "fields": {
            "unnamed": [
              {
                "id": {
                  "kind": "Field",
                  "path": [
                    "0"
                  ],
                  "disambiguator": 0
                },
                "name": "0",
                "type": {
                  "name": "T"
                },
                "required": true
              }
            ]
          }
        },
        {
          "id": {
            "kind": "Variant",
            "path": [
              "Variant2"
            ],
            "disambiguator": 0
          },
          "name": "Variant2",
          "fields": {
            "unnamed": [
              {
                "id": {
                  "kind": "Field",
                  "path": [
                    "0"
                  ],
                  "disambiguator": 0
                },
                "name": "0",
                "type": {
                  "name": "T"
                },
                "required": true
              },
              {
                "id": {
                  "kind": "Field",
                  "path": [
                    "1"
                  ],
                  "disambiguator": 0
                },
                "name": "1",
                "type": {
                  "name": "T"
                },
                "required": true
              }
            ]
          }
        }
      ]
    },
    {
      "kind": "primitive",
      "id": {
        "kind": "Primitive",
        "path": [
          "u8"
        ],
        "disambiguator": 0
      },
      "name": "u8",
      "description": "8-bit unsigned integer"
    }
  ]
}
