reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__enums__internally_tagged_enum_with_user_defined_types-3.snap
---
source: reflectapi-demo/src/tests/enums.rs
expression: "super::into_rust_code::<E>()"
---
// DO NOT MODIFY THIS FILE MANUALLY
// This file was generated by reflectapi-cli
//
// Schema name:
//

#![allow(non_camel_case_types)]
#![allow(dead_code)]

pub use interface::Interface;
pub use reflectapi::rt::*;

pub mod interface {

    #[derive(Debug)]
    pub struct Interface<C: reflectapi::rt::Client + Clone> {
        client: C,
        base_url: reflectapi::rt::Url,
    }

    impl<C: reflectapi::rt::Client + Clone> Interface<C> {
        pub fn try_new(
            client: C,
            base_url: reflectapi::rt::Url,
        ) -> std::result::Result<Self, reflectapi::rt::UrlParseError> {
            if base_url.cannot_be_a_base() {
                return Err(reflectapi::rt::UrlParseError::RelativeUrlWithCannotBeABaseBase);
            }

            Ok(Self { client, base_url })
        }
        pub async fn inout_test(
            &self,
            input: super::types::reflectapi_demo::tests::enums::E,
            headers: reflectapi::Empty,
        ) -> Result<
            super::types::reflectapi_demo::tests::enums::E,
            reflectapi::rt::Error<reflectapi::Empty, C::Error>,
        > {
            reflectapi::rt::__request_impl(
                &self.client,
                self.base_url
                    .join("/inout_test")
                    .expect("checked base_url already and path is valid"),
                input,
                headers,
            )
            .await
        }
    }
}
pub mod types {

    pub mod reflectapi_demo {
        pub mod tests {
            pub mod enums {

                #[derive(Debug, serde::Deserialize, serde::Serialize)]
                pub enum A {
                    X,
                    Y,
                    Z,
                }

                #[derive(Debug, serde::Deserialize, serde::Serialize)]
                pub struct B {
                    pub p: std::string::String,
                    pub q: f64,
                }

                #[derive(Debug, serde::Deserialize, serde::Serialize)]
                #[serde(tag = "tag")]
                pub enum E {
                    #[serde(rename = "a")]
                    A(super::super::super::reflectapi_demo::tests::enums::B),
                    #[serde(rename = "b")]
                    B(super::super::super::reflectapi_demo::tests::enums::A),
                    #[serde(rename = "c")]
                    C {
                        items: std::vec::Vec<std::string::String>,
                        value: f64,
                    },
                    #[serde(rename = "d")]
                    D,
                }
            }
        }
    }
}
